infra/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app-service
  ports:
    - protocol: TCP
      port: 1337
      targetPort: 1337
